Related: tdf#151641 set windows WorkspaceColor similiar to other platforms

from the same bg as the dialog/face, so we get a good "application background"
color in dark mode

Change-Id: Ieeb29ed1df177a91691b7b83d056af4068d0e170
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141725
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>